新聞過濾：濾除中國＋他國國名個人刑案雜訊